--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -31,6 +31,29 @@
     }
   }
 
+  &__create {
+    display: flex;
+    gap: 1rem;
+    .create-title {
+      display: flex;
+      align-items: center;
+    }
+    .create-icon {
+      padding: .2rem;
+      font-size: 22px !important;
+      border: 1px solid #c9c9c9;
+      margin: 0 0.5rem;
+      color: #818181 !important;
+      border-radius: 5px;
+      transition: $transition;
+      cursor: pointer;
+    }
+    .create-icon:hover {
+  
+      background-color: #e2e1e1;
+    }
+  }
+
   &__main {
     display: flex;
     &--search {
