--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -49,7 +49,9 @@
       cursor: pointer;
     }
     .create-icon:hover {
-  
+      background-color: #e2e1e1;
+    }
+    .create-icon.clicked {
       background-color: #e2e1e1;
     }
   }
