--- a/sass/_smallSearch.scss
+++ b/sass/_smallSearch.scss
@@ -6,14 +6,19 @@
   justify-content: center;
   font-size: font-size(font-size-small);
   display: none;
-  padding: 40px 10px 36px 10px;
+  padding: 60px 10px 56px 10px;
 
   .field-container {
     width: 100%;
   }
+  .navbar__create {
+    padding-right: .5rem;
+  }
   @include media-medium {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
+    flex-direction: column;
+    gap: 1.5rem;
   }
 }
