--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -66,7 +66,6 @@
           margin-top: 0.5rem;
           display: flex;
           gap: 0.5rem;
-         
         }
 
         &--collapse {
@@ -108,7 +107,6 @@
         padding-bottom: 1rem;
         .item-name {
           padding: 0.5rem 1rem 0 1rem;
-         
         }
       }
       // &__item.create-item:hover,
@@ -118,7 +116,7 @@
       // }
     }
     .create-icon {
-      padding: .2rem;
+      padding: 0.2rem;
       font-size: 22px !important;
       border: 1px solid #c9c9c9;
       margin: 0 0.5rem;
@@ -191,7 +189,6 @@
     background-color: var(--color-blue-hover);
   }
 }
-
 
 .group {
   // display: flex;
@@ -346,4 +343,6 @@
 
 .group-container-create {
   margin-bottom: 1rem;
+  display: flex;
+  align-items: self-end;
 }
