--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -544,13 +544,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -607,6 +610,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
 }
@@ -679,7 +683,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -893,6 +896,8 @@ hr {
 
 .group-container-create {
   margin-bottom: 1rem;
+  display: flex;
+  align-items: self-end;
 }
 
 .navbar {
@@ -973,6 +978,10 @@ hr {
   align-items: center;
   gap: 2rem;
 }
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1013,7 +1022,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1387,6 +1397,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1523,6 +1534,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1551,6 +1563,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1727,9 +1740,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1752,6 +1775,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -1948,6 +1976,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -1988,6 +2017,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2297,6 +2327,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2314,6 +2345,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2424,6 +2456,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -2984,6 +3017,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3071,6 +3105,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3120,6 +3155,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3235,6 +3271,7 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
+  width: -moz-fit-content;
   width: fit-content;
   height: 35px;
 }
@@ -3386,6 +3423,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3788,6 +3826,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4051,7 +4090,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -4280,7 +4320,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4331,7 +4372,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4509,7 +4551,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
