--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -344,5 +344,7 @@
 .group-container-create {
   margin-bottom: 1rem;
   display: flex;
-  align-items: self-end;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 0.5rem 1.5rem;
 }
