--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -897,7 +897,9 @@ hr {
 .group-container-create {
   margin-bottom: 1rem;
   display: flex;
-  align-items: self-end;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 0.5rem 1.5rem;
 }
 
 .navbar {
