--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -288,9 +288,9 @@
   }
 }
 
-.group:not(:first-child) {
-  margin-top: 1rem;
-}
+// .group:not(:first-child) {
+//   margin-top: 1rem;
+// }
 .group.green {
   .group-name {
     color: #36562c;
@@ -344,7 +344,7 @@
 .group-container-create {
   margin-bottom: 1rem;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   flex-wrap: wrap;
   gap: 0.5rem 1.5rem;
 }
