--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -5,79 +5,85 @@
   background-color: var(--color-bg-light);
   color: var(--color-permanent-primary);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   padding: $padding-medium;
   font-size: font-size(font-size-regular);
-  height: 6.5rem;
+  // height: 6.5rem;
   z-index: 100;
   border: 1px solid var(--color-light-gray);
-
-  &__menu {
+  .navbar-top {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: $gap-large;
-    &--side-toggle {
-      cursor: pointer;
-      display: none;
-      span {
-        font-size: font-size(font-size-regular);
+    .navbar__menu {
+      display: flex;
+      align-items: center;
+      gap: $gap-large;
+      &--side-toggle {
+        cursor: pointer;
+        display: none;
+        span {
+          font-size: font-size(font-size-regular);
+        }
       }
-    }
-    &--logo {
-      display: flex;
-      align-items: center;
-      gap: $gap-small;
-    }
-  }
-
-  &__create {
-    display: flex;
-    gap: 1rem;
-    .create-title {
-      display: flex;
-      align-items: center;
-    }
-    .create-icon {
-      padding: 0.2rem;
-      font-size: 22px !important;
-      border: 1px solid #c9c9c9;
-      margin: 0 0.5rem;
-      color: #818181 !important;
-      border-radius: 5px;
-      transition: $transition;
-      cursor: pointer;
-    }
-    .create-icon:hover {
-      background-color: #e2e1e1;
-    }
-    .create-icon.clicked {
-      background-color: #e2e1e1;
-    }
-  }
-
-  &__main {
-    display: flex;
-    &--search {
-      display: flex;
-      align-items: center;
-      gap: $gap-medium;
-      position: relative;
-
-      &__links-container {
+      .navbar__menu--logo {
         display: flex;
         align-items: center;
         gap: $gap-small;
       }
     }
-    &--media-small {
-      display: none;
+
+    .navbar__create {
+      display: flex;
+      gap: 1rem;
+      .create-title {
+        display: flex;
+        align-items: center;
+      }
+      .create-icon {
+        padding: 0.2rem;
+        font-size: 22px !important;
+        border: 1px solid #c9c9c9;
+        margin: 0 0.5rem;
+        color: #818181 !important;
+        border-radius: 5px;
+        transition: $transition;
+        cursor: pointer;
+      }
+      .create-icon:hover {
+        background-color: #e2e1e1;
+      }
+      .create-icon.clicked {
+        background-color: #e2e1e1;
+      }
+    }
+
+    .navbar__main {
+      display: flex;
+      .navbar__main--search {
+        display: flex;
+        align-items: center;
+        gap: $gap-medium;
+        position: relative;
+
+        &__links-container {
+          display: flex;
+          align-items: center;
+          gap: $gap-small;
+        }
+      }
+      .navbar__main--media-small {
+        display: none;
+      }
+    }
+    .navbar__personal {
+      display: flex;
+      align-items: center;
+      gap: $gap-big;
     }
   }
-  &__personal {
+  .navbar-bottom {
     display: flex;
-    align-items: center;
-    gap: $gap-big;
   }
 
   input[type="text"].search-input::placeholder {
@@ -86,29 +92,38 @@
   }
 
   @media screen and (max-width: 920px) {
-    &__personal {
-      &--name {
-        display: none;
+    .navbar-top {
+      .navbar__personal {
+        .navbar__personal--name {
+          display: none;
+        }
       }
     }
   }
 
   @include media-medium {
-    &__main {
-      display: none;
-      &--media-small {
-        display: flex;
-        gap: $gap-medium;
-        align-items: center;
+    .navbar-top {
+      .navbar__main {
+        display: none;
+        .navbar__main--media-small {
+          display: flex;
+          gap: $gap-medium;
+          align-items: center;
+        }
       }
     }
   }
   @include media-tablet-big {
-    .navbar__menu--side-toggle {
-      display: block;
-    }
-    &__menu {
-      &--logo {
+    .navbar-top {
+      .navbar__menu--side-toggle {
+        display: block;
+      }
+      .navbar__menu {
+        .navbar__menu--logo {
+          display: none;
+        }
+      }
+      .navbar__create {
         display: none;
       }
     }
@@ -151,4 +166,9 @@
 
 .color-change {
   color: var(--color-primary);
+}
+
+.icons-container-create {
+  display: flex;
+  overflow: hidden;
 }
