--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -43,18 +43,20 @@
       .create-icon {
         padding: 0.2rem;
         font-size: 22px !important;
-        border: 1px solid #c9c9c9;
-        margin: 0 0.5rem;
+        margin: 0 0.3rem;
         color: #818181 !important;
+        border: 1px solid transparent;
         border-radius: 5px;
         transition: $transition;
         cursor: pointer;
       }
       .create-icon:hover {
         background-color: #e2e1e1;
+        border: 1px solid #c9c9c9;
       }
       .create-icon.clicked {
         background-color: #e2e1e1;
+        border: 1px solid #c9c9c9;
       }
     }
 
