--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -254,6 +254,7 @@
     gap: 0.5rem;
     flex-wrap: wrap;
     .edit-content {
+      cursor: pointer;
       max-width: 100px;
       .edit-field:hover {
         background-color: var(--color-permanent-bg);
