--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -828,6 +828,7 @@ hr {
   flex-wrap: wrap;
 }
 .group .group-fields .edit-content {
+  cursor: pointer;
   max-width: 100px;
 }
 .group .group-fields .edit-content .edit-field:hover {
@@ -944,18 +945,20 @@ hr {
 .navbar .navbar-top .navbar__create .create-icon {
   padding: 0.2rem;
   font-size: 22px !important;
-  border: 1px solid #c9c9c9;
-  margin: 0 0.5rem;
+  margin: 0 0.3rem;
   color: #818181 !important;
+  border: 1px solid transparent;
   border-radius: 5px;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
 .navbar .navbar-top .navbar__create .create-icon:hover {
   background-color: #e2e1e1;
+  border: 1px solid #c9c9c9;
 }
 .navbar .navbar-top .navbar__create .create-icon.clicked {
   background-color: #e2e1e1;
+  border: 1px solid #c9c9c9;
 }
 .navbar .navbar-top .navbar__main {
   display: flex;
