--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -909,7 +909,6 @@ hr {
   flex-direction: column;
   padding: 1rem;
   font-size: 1.25rem;
-  height: 7rem;
   z-index: 100;
   border: 1px solid var(--color-light-gray);
 }
@@ -996,6 +995,9 @@ hr {
   font-size: 1.25rem;
 }
 @media screen and (max-width: 985px) {
+  .navbar {
+    height: 7rem;
+  }
   .navbar .navbar-top .navbar__main {
     display: none;
   }
