--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   padding: $padding-medium;
+  padding-bottom: 0;
   font-size: font-size(font-size-regular);
   z-index: 100;
   border: 1px solid var(--color-light-gray);
