--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -908,6 +908,7 @@ hr {
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  padding-bottom: 0;
   font-size: 1.25rem;
   z-index: 100;
   border: 1px solid var(--color-light-gray);
