--- a/sass/_smallSearch.scss
+++ b/sass/_smallSearch.scss
@@ -1,6 +1,6 @@
 .small-screen-search {
   width: 100%;
-  height: 10vh;
+  // height: 10vh;
   background-color: var(--color-on-primary);
   align-items: center;
   justify-content: center;
