--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1068,6 +1068,12 @@ hr {
   overflow: hidden;
 }
 
+.navbar__create-append {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1rem;
+}
+
 .home {
   background-color: var(--color-bg);
   display: flex;
@@ -1913,7 +1919,6 @@ textarea {
 
 .small-screen-search {
   width: 100%;
-  height: 10vh;
   background-color: var(--color-on-primary);
   align-items: center;
   justify-content: center;
