--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -544,16 +544,13 @@ i {
 }
 
 textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
-}
-
-textarea::-moz-placeholder {
-  color: gray;
-  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -610,7 +607,6 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
-  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
 }
@@ -683,6 +679,7 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
+  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -935,32 +932,6 @@ hr {
   align-items: center;
   gap: 0.5rem;
 }
-.navbar .navbar-top .navbar__create {
-  display: flex;
-  gap: 1rem;
-}
-.navbar .navbar-top .navbar__create .create-title {
-  display: flex;
-  align-items: center;
-}
-.navbar .navbar-top .navbar__create .create-icon {
-  padding: 0.2rem;
-  font-size: 22px !important;
-  margin: 0 0.3rem;
-  color: #818181 !important;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-}
-.navbar .navbar-top .navbar__create .create-icon:hover {
-  background-color: #e2e1e1;
-  border: 1px solid #c9c9c9;
-}
-.navbar .navbar-top .navbar__create .create-icon.clicked {
-  background-color: #e2e1e1;
-  border: 1px solid #c9c9c9;
-}
 .navbar .navbar-top .navbar__main {
   display: flex;
 }
@@ -986,10 +957,6 @@ hr {
 .navbar .navbar-bottom {
   display: flex;
   margin-top: 1rem;
-}
-.navbar input[type=text].search-input::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.25rem;
 }
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
@@ -1032,8 +999,7 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1072,6 +1038,33 @@ hr {
   display: flex;
   flex-direction: column-reverse;
   gap: 1rem;
+}
+
+.navbar__create {
+  display: flex;
+  gap: 1rem;
+}
+.navbar__create .create-title {
+  display: flex;
+  align-items: center;
+}
+.navbar__create .create-icon {
+  padding: 0.2rem;
+  font-size: 22px !important;
+  margin: 0 0.3rem;
+  color: #818181 !important;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.navbar__create .create-icon:hover {
+  background-color: #e2e1e1;
+  border: 1px solid #c9c9c9;
+}
+.navbar__create .create-icon.clicked {
+  background-color: #e2e1e1;
+  border: 1px solid #c9c9c9;
 }
 
 .home {
@@ -1418,7 +1411,6 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
-  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1556,7 +1548,6 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
-  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1585,7 +1576,6 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1762,19 +1752,9 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input::-moz-placeholder {
-  color: var(--color-permanent-on-primary-light);
-  font-size: 1.25rem;
-}
-
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
-}
-
-input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
-  opacity: 0.5;
-  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1797,11 +1777,6 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
-}
-
-input[type=text].edit-name::-moz-placeholder {
-  opacity: 0.5;
-  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -1924,7 +1899,7 @@ textarea {
   justify-content: center;
   font-size: 1.2rem;
   display: none;
-  padding: 60px 10px 56px 10px;
+  padding: 25px 10px 5px 10px;
 }
 .small-screen-search .field-container {
   width: 100%;
@@ -2001,7 +1976,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2042,7 +2016,6 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
-  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2352,7 +2325,6 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2370,7 +2342,6 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2481,7 +2452,6 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
-  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3042,7 +3012,6 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
-  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3130,7 +3099,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3180,7 +3148,6 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3296,7 +3263,6 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
-  width: -moz-fit-content;
   width: fit-content;
   height: 35px;
 }
@@ -3448,7 +3414,6 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
-  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3851,7 +3816,6 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
-  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4115,8 +4079,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   cursor: pointer;
 }
 
@@ -4345,8 +4308,7 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4397,8 +4359,7 @@ textarea {
 
 img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4576,8 +4537,7 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   display: block;
 }
