--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -593,7 +593,6 @@ hr {
 }
 
 .side-nav {
-  background-color: var(--color-on-primary);
   background-color: var(--color-bg-light);
   top: 0;
   right: 0;
@@ -609,6 +608,7 @@ hr {
   min-height: 100vh;
   max-height: min-content;
   min-width: 200px;
+  margin-top: 1rem;
 }
 .side-nav__content--list {
   display: flex;
