--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,6 +1,6 @@
 .side-nav {
   background-color: var(--color-bg-light);
-  background-color: #daedfe;
+  background-color: var(--color-blue);
   top: 0;
   right: 0;
   z-index: 99;
