--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -594,7 +594,7 @@ hr {
 
 .side-nav {
   background-color: var(--color-bg-light);
-  background-color: #daedfe;
+  background-color: var(--color-blue);
   top: 0;
   right: 0;
   z-index: 99;
