--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -36,6 +36,7 @@
 
     .navbar__main {
       display: flex;
+      gap: 1rem;
       .navbar__main--search {
         display: flex;
         align-items: center;
@@ -61,6 +62,20 @@
   .navbar-bottom {
     display: flex;
     margin-top: 1rem;
+  }
+  .navbar-bottom.full-create {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      justify-items: center;
+      padding: 1rem;
+      border-top: 1px solid var(--color-light-gray);
+     
+      .full-create--box {
+        .create-sub-title {
+          margin-bottom: 1.5rem;
+          margin-top: 1rem;
+        }
+      }
   }
 
   input[type="text"].search-input::placeholder {
@@ -141,6 +156,7 @@
   display: flex;
   overflow: hidden;
   gap: .3rem;
+  align-items: center;
 }
 
 .navbar__create-append {
@@ -153,12 +169,21 @@
 
 
 .navbar__create {
+  background-color: var(--color-permanent-bg);
+  width: max-content;
   display: flex;
   gap: .5rem;
-  background-color: var(--color-blue);
-  padding: 0.4rem .9rem 0.4rem 0.4rem;
-  border-radius: 8px;
-  width: max-content;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  min-width: 0;
+  height: 46px;
+  border-radius: 2.2rem;
+  padding-right: 1rem;
+  background-color: var(--color-permanent-bg);
+  transition: all 0.2s ease-in-out;
+
   .create-title {
     display: flex;
     align-items: center;
