--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -935,6 +935,7 @@ hr {
 }
 .navbar .navbar-top .navbar__main {
   display: flex;
+  gap: 1rem;
 }
 .navbar .navbar-top .navbar__main .navbar__main--search {
   display: flex;
@@ -957,6 +958,17 @@ hr {
 }
 .navbar .navbar-bottom {
   display: flex;
+  margin-top: 1rem;
+}
+.navbar .navbar-bottom.full-create {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  padding: 1rem;
+  border-top: 1px solid var(--color-light-gray);
+}
+.navbar .navbar-bottom.full-create .full-create--box .create-sub-title {
+  margin-bottom: 1.5rem;
   margin-top: 1rem;
 }
 .navbar input[type=text].search-input::placeholder {
@@ -1034,6 +1046,7 @@ hr {
   display: flex;
   overflow: hidden;
   gap: 0.3rem;
+  align-items: center;
 }
 
 .navbar__create-append {
@@ -1044,12 +1057,20 @@ hr {
 }
 
 .navbar__create {
+  background-color: var(--color-permanent-bg);
+  width: max-content;
   display: flex;
   gap: 0.5rem;
-  background-color: var(--color-blue);
-  padding: 0.4rem 0.9rem 0.4rem 0.4rem;
-  border-radius: 8px;
-  width: max-content;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  min-width: 0;
+  height: 46px;
+  border-radius: 2.2rem;
+  padding-right: 1rem;
+  background-color: var(--color-permanent-bg);
+  transition: all 0.2s ease-in-out;
 }
 .navbar__create .create-title {
   display: flex;
@@ -1781,7 +1802,7 @@ input[type=text].edit-name::placeholder {
   padding: 0 0.5rem;
   align-self: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   color: var(--color-permanent-on-primary-light);
 }
 
@@ -1795,7 +1816,7 @@ input[type=text].edit-name::placeholder {
   min-width: 0;
   height: 46px;
   border-radius: 2.2rem;
-  padding: 1rem;
+  padding-right: 0.5rem;
   background-color: var(--color-permanent-bg);
   transition: all 0.2s ease-in-out;
 }
@@ -2352,14 +2373,14 @@ textarea {
 }
 
 .round-btn-primary {
-  color: var(--color-on-primary-light);
-  background-color: transparent;
+  color: var(--color-on-primary);
+  background-color: var(--color-primary);
   transition: all 0.2s ease-in-out;
 }
 
-.round-btn-primary:hover,
-.round-btn-primary:active {
-  background-color: var(--color-hover-btn);
+.round-btn-primary.green {
+  color: var(--color-on-primary);
+  background-color: var(--color-green);
 }
 
 .round-btn-secondary {
