--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -61,7 +61,9 @@
   }
   .navbar-bottom {
     display: flex;
+    flex-direction: column;
     margin-top: 1rem;
+    gap: 1rem;
   }
   .navbar-bottom.full-create {
       display: grid;
