--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -962,17 +962,6 @@ hr {
   margin-top: 1rem;
   gap: 1rem;
 }
-.navbar .navbar-bottom.full-create {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-items: center;
-  padding: 1rem;
-  border-top: 1px solid var(--color-light-gray);
-}
-.navbar .navbar-bottom.full-create .full-create--box .create-sub-title {
-  margin-bottom: 1.5rem;
-  margin-top: 1rem;
-}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1047,8 +1036,26 @@ hr {
 .icons-container-create {
   display: flex;
   overflow: hidden;
-  gap: 0.3rem;
+  gap: 1.2rem;
   align-items: center;
+  margin-bottom: 1rem;
+}
+.icons-container-create .create-category {
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  border: 1px solid var(--color-blue);
+  padding: 0.4rem;
+  border-radius: 10px 10px 0 0;
+}
+.icons-container-create .create-category .create-icon {
+  font-size: 20px !important;
+  color: var(--color-primary) !important;
+}
+.icons-container-create .create-category:hover {
+  background-color: var(--color-blue);
 }
 
 .navbar__create-append {
@@ -1077,9 +1084,6 @@ hr {
 .navbar__create .create-title {
   display: flex;
   align-items: center;
-}
-.navbar__create .create-icon {
-  font-size: 22px !important;
 }
 
 .home {
