--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -198,3 +198,11 @@
 
  
 }
+
+.group-fields {
+  padding: 0 1rem;
+  font-size: 14px;
+}
+.focus-category {
+  background-color: var(--color-blue);
+}
