--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -66,7 +66,6 @@
     gap: 1rem;
   }
 
-
   input[type="text"].search-input::placeholder {
     opacity: 0.5;
     font-size: font-size(font-size-regular);
@@ -152,12 +151,13 @@
     transition: $transition;
     display: flex;
     align-items: center;
-    gap: .6rem;
+    gap: 0.6rem;
     border: 1px solid var(--color-blue);
-    padding: .4rem;
+    padding: 0 0.4rem;
     border-radius: 10px 10px 0 0;
+    font-size: 12px;
     .create-icon {
-      font-size: 20px !important;
+      font-size: 17px !important;
       color: var(--color-primary) !important;
     }
   }
@@ -173,13 +173,11 @@
   width: 100%;
 }
 
-
-
 .navbar__create {
   background-color: var(--color-permanent-bg);
   width: max-content;
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -195,8 +193,6 @@
     display: flex;
     align-items: center;
   }
-
- 
 }
 
 .group-fields {
