--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -544,13 +544,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -607,6 +610,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -680,7 +684,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -962,6 +965,10 @@ hr {
   margin-top: 1rem;
   gap: 1rem;
 }
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1003,7 +1010,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1047,11 +1055,12 @@ hr {
   align-items: center;
   gap: 0.6rem;
   border: 1px solid var(--color-blue);
-  padding: 0.4rem;
+  padding: 0 0.4rem;
   border-radius: 10px 10px 0 0;
+  font-size: 12px;
 }
 .icons-container-create .create-category .create-icon {
-  font-size: 20px !important;
+  font-size: 17px !important;
   color: var(--color-primary) !important;
 }
 .icons-container-create .create-category:hover {
@@ -1067,6 +1076,7 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1439,6 +1449,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1576,6 +1587,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1604,6 +1616,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1780,9 +1793,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1805,6 +1828,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2004,6 +2032,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2044,6 +2073,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2353,6 +2383,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2370,6 +2401,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2480,6 +2512,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3040,6 +3073,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3127,6 +3161,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3176,6 +3211,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3291,6 +3327,7 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
+  width: -moz-fit-content;
   width: fit-content;
   height: 35px;
 }
@@ -3442,6 +3479,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3844,6 +3882,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4107,7 +4146,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -4336,7 +4376,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4387,7 +4428,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4565,7 +4607,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
