--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -154,7 +154,7 @@
     gap: 0.4rem;
     border: 1px solid var(--color-blue);
     padding: 0 0.4rem;
-    border-radius: 10px 10px 0 0;
+    border-radius: 8px;
     font-size: 12px;
     .create-icon {
       font-size: 17px !important;
