--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1056,7 +1056,7 @@ hr {
   gap: 0.4rem;
   border: 1px solid var(--color-blue);
   padding: 0 0.4rem;
-  border-radius: 10px 10px 0 0;
+  border-radius: 8px;
   font-size: 12px;
 }
 .icons-container-create .create-category .create-icon {
@@ -2428,6 +2428,11 @@ textarea {
 .round-btn-primary.green {
   color: var(--color-on-primary);
   background-color: var(--color-green);
+}
+
+.round-btn-primary.purple {
+  color: var(--color-on-primary);
+  background-color: var(--color-on-btn);
 }
 
 .round-btn-secondary {
