--- a/sass/_inputs.scss
+++ b/sass/_inputs.scss
@@ -68,7 +68,7 @@ input[type="text"].edit-name::placeholder {
 .input-container {
   display: flex;
   align-items: center;
-  gap: $gap-medium;
+  gap: $gap-small;
   flex-direction: row;
   justify-content: space-between;
   flex: 1;
