--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -37,6 +37,7 @@
     .navbar__main {
       display: flex;
       gap: 1rem;
+      width: 300px;
       .navbar__main--search {
         display: flex;
         align-items: center;
@@ -46,7 +47,6 @@
         &__links-container {
           display: flex;
           align-items: center;
-          gap: $gap-small;
         }
       }
       .navbar__main--media-small {
@@ -182,7 +182,6 @@
   justify-content: space-between;
   align-items: center;
   flex: 1;
-  min-width: 0;
   height: 46px;
   border-radius: 2.2rem;
   padding-right: 1rem;
