--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -939,6 +939,7 @@ hr {
 .navbar .navbar-top .navbar__main {
   display: flex;
   gap: 1rem;
+  width: 300px;
 }
 .navbar .navbar-top .navbar__main .navbar__main--search {
   display: flex;
@@ -949,7 +950,6 @@ hr {
 .navbar .navbar-top .navbar__main .navbar__main--search__links-container {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
 }
 .navbar .navbar-top .navbar__main .navbar__main--media-small {
   display: none;
@@ -1084,7 +1084,6 @@ hr {
   justify-content: space-between;
   align-items: center;
   flex: 1;
-  min-width: 0;
   height: 46px;
   border-radius: 2.2rem;
   padding-right: 1rem;
@@ -1852,7 +1851,7 @@ input[type=text].edit-name::placeholder {
 .input-container {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   flex-direction: row;
   justify-content: space-between;
   flex: 1;
