--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -201,3 +201,40 @@
 .focus-category {
   background-color: var(--color-blue);
 }
+
+.full-menu {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  justify-items: center;
+  padding: 1rem;
+  border-top: 1px solid var(--color-light-gray);
+  &__box {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    &--title {
+      font-size: 1.4rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      color: var(--color-primary);
+      font-weight: 500;
+      .material-symbols-outlined {
+        font-size: 1.9rem;
+      }
+    }
+    &--list {
+      font-size: 1.2rem;
+      // margin-right: 2.5rem;
+      li {
+        cursor: pointer;
+        font-weight: font-weight(font-weight-light);
+      }
+      li:hover,
+      li:active {
+        font-weight: font-weight(font-weight-regular);
+      }
+    }
+  }
+}
